SH-147 fix overflow autocomplete

--- a/src/assets/stylesheets/global.scss
+++ b/src/assets/stylesheets/global.scss
@@ -39,6 +39,7 @@ main {
 .objectiveModal {
     .v--modal {
         height: initial !important;
+        overflow: initial;
     }
     .close{
         position: absolute;
